--- a/Capstone02/Views/Shared/_Layout.cshtml
+++ b/Capstone02/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <!---ICONS--->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css?v=@DateTime.UtcNow.Ticks.ToString()" />
+    <link rel="stylesheet" href="~/css/home.css" />
    
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -36,6 +37,7 @@
 
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css" />
     <!------TABLE-------->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
